syntax = "proto3";

package front.admin.v1;

import "google/api/annotations.proto";

option go_package = "api/front/admin/v1;v1";


message CouponAddReq {
  int64     type = 2;
  string    name = 3;
  int64     platform = 4;
  int64     count = 5;
  double    amount = 6;
  int64     perLimit = 7;
  double    minPoint = 8;
  string    startTime = 9;
  string    endTime = 10;
  int64     useType = 11;
  string    note = 12;
  int64     publishCount = 13;
  int64     useCount = 14;
  int64     receiveCount = 15;
  string    enableTime = 16;
  string    code = 17;
  int64     memberLevel = 18;
}

message CouponAddResp {
  string pong = 1;
}

message CouponListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message CouponListData{
  int32     id = 1;
  int32     type = 2;
  string    name = 3;
  int32     platform = 4;
  int32     count = 5;
  double    amount = 6;
  int32     perLimit = 7;
  double    minPoint = 8;
  string    startTime = 9;
  string    endTime = 10;
  int32     useType = 11;
  string    note = 12;
  int32     publishCount = 13;
  int32     useCount = 14;
  int32     receiveCount = 15;
  string    enableTime = 16;
  string    code = 17;
  int32     memberLevel = 18;
}

message CouponListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  CouponListData data = 6;
  bool success = 7;
}

message CouponUpdateReq {
  int64     id = 1;
  int64     type = 2;
  string    name = 3;
  int64     platform = 4;
  int64     count = 5;
  double    amount = 6;
  int64     perLimit = 7;
  double    minPoint = 8;
  string    startTime = 9;
  string    endTime = 10;
  int64     useType = 11;
  string    note = 12;
  int64     publishCount = 13;
  int64     useCount = 14;
  int64     receiveCount = 15;
  string    enableTime = 16;
  string    code = 17;
  int64     memberLevel = 18;
}

message CouponUpdateResp {
  string pong = 1;
}

message CouponDeleteReq {
  int64 id = 1;
}

message CouponDeleteResp {
  string pong = 1;
}

message CouponHistoryAddReq {
  int64      couponId = 2;
  int64      memberId = 3;
  string      couponCode = 4;
  string      memberNickname = 5;
  int64      GetType = 6;
  string  createTime = 7;
  int64      useStatus = 8;
  string  useTime = 9;
  int64      orderId = 10;
  string      orderSn = 11;
}

message CouponHistoryAddResp {
  string pong = 1;
}

message CouponHistoryListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message CouponHistoryListData{
  int32      id = 1;
  int32      couponId = 2;
  int32      memberId = 3;
  string      couponCode = 4;
  string      memberNickname = 5;
  int32      GetType = 6;
  string  createTime = 7;
  int32      useStatus = 8;
  string  useTime = 9;
  int32      orderId = 10;
  string      orderSn = 11;

}

message CouponHistoryListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  CouponHistoryListData data = 6;
  bool success = 7;
}

message CouponHistoryUpdateReq {
  int64      id = 1;
  int64      couponId = 2;
  int64      memberId = 3;
  string      couponCode = 4;
  string      memberNickname = 5;
  int64      GetType = 6;
  string  createTime = 7;
  int64      useStatus = 8;
  string  useTime = 9;
  int64      orderId = 10;
  string      orderSn = 11;
}

message CouponHistoryUpdateResp {
  string pong = 1;
}

message CouponHistoryDeleteReq {
  int64 id = 1;
}

message CouponHistoryDeleteResp {
  string pong = 1;
}


message CouponProductCategoryRelationAddReq {
  int64  couponId = 2;
  int64  productCategoryId = 3;
  string  productCategoryName = 4;
  string  parentCategoryName = 5;
}

message CouponProductCategoryRelationAddResp {
  string pong = 1;
}

message CouponProductCategoryRelationListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message CouponProductCategoryRelationListData{
  int32  id = 1;
  int32  couponId = 2;
  int32  productCategoryId = 3;
  string  productCategoryName = 4;
  string  parentCategoryName = 5;

}

message CouponProductCategoryRelationListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  CouponProductCategoryRelationListData data = 6;
  bool success = 7;
}

message CouponProductCategoryRelationUpdateReq {
  int64  id = 1;
  int64  couponId = 2;
  int64  productCategoryId = 3;
  string  productCategoryName = 4;
  string  parentCategoryName = 5;
}

message CouponProductCategoryRelationUpdateResp {
  string pong = 1;
}

message CouponProductCategoryRelationDeleteReq {
  int64 id = 1;
}

message CouponProductCategoryRelationDeleteResp {
  string pong = 1;
}


message CouponProductRelationAddReq {
  int64    couponId = 2;
  int64    productId = 3;
  string  productName = 4;
  string  productSn = 5;
}

message CouponProductRelationAddResp {
  string pong = 1;
}

message CouponProductRelationListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message CouponProductRelationListData{
  int32    id = 1;
  int32    couponId = 2;
  int32    productId = 3;
  string  productName = 4;
  string  productSn = 5;

}

message CouponProductRelationListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  CouponProductRelationListData data = 6;
  bool success = 7;
}

message CouponProductRelationUpdateReq {
  int64    id = 1;
  int64    couponId = 2;
  int64    productId = 3;
  string  productName = 4;
  string  productSn = 5;
}

message CouponProductRelationUpdateResp {
  string pong = 1;
}

message CouponProductRelationDeleteReq {
  int64 id = 1;
}

message CouponProductRelationDeleteResp {
  string pong = 1;
}

message FlashPromotionLogAddReq {
  int64      memberId = 2;
  int64      productId = 3;
  string      memberPhone = 4;
  string      productName = 5;
  string  subscribeTime = 6;
  string  sendTime = 7;
}

message FlashPromotionLogAddResp {
  string pong = 1;
}

message FlashPromotionLogListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message FlashPromotionLogListData{
  int32      id = 1;
  int32      memberId = 2;
  int32      productId = 3;
  string      memberPhone = 4;
  string      productName = 5;
  string  subscribeTime = 6;
  string  sendTime = 7;

}

message FlashPromotionLogListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  FlashPromotionLogListData data = 6;
  bool success = 7;
}

message FlashPromotionLogUpdateReq {
  int64      id = 1;
  int64      memberId = 2;
  int64      productId = 3;
  string      memberPhone = 4;
  string      productName = 5;
  string  subscribeTime = 6;
  string  sendTime = 7;
}

message FlashPromotionLogUpdateResp {
  string pong = 1;
}

message FlashPromotionLogDeleteReq {
  int64 id = 1;
}

message FlashPromotionLogDeleteResp {
  string pong = 1;
}


message FlashPromotionAddReq {
  string      Title = 2;
  string  startDate = 3;
  string  endDate = 4;
  int64      status = 5;
  string  createTime = 6;
}

message FlashPromotionAddResp {
  string pong = 1;
}

message FlashPromotionListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message FlashPromotionListData{
  int32      id = 1;
  string      title = 2;
  string  startDate = 3;
  string  endDate = 4;
  int32      status = 5;
  string  createTime = 6;

}

message FlashPromotionListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  FlashPromotionListData data = 6;
  bool success = 7;
}

message FlashPromotionUpdateReq {
  int64      id = 1;
  string      Title = 2;
  string  startDate = 3;
  string  endDate = 4;
  int64      status = 5;
  string  createTime = 6;
}

message FlashPromotionUpdateResp {
  string pong = 1;
}

message FlashPromotionDeleteReq {
  int64 id = 1;
}

message FlashPromotionDeleteResp {
  string pong = 1;
}


message FlashPromotionProductRelationAddReq {
  int64    flashPromotionId = 2;
  int64    flashPromotionSessionId = 3;
  int64    productId = 4;
  int64  flashPromotionPrice = 5;
  int64    flashPromotionCount = 6;
  int64    flashPromotionLimit = 7;
  int64    sort = 8;
}

message FlashPromotionProductRelationAddResp {
  string pong = 1;
}

message FlashPromotionProductRelationListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message FlashPromotionProductRelationListData{
  int32    id = 1;
  int32    flashPromotionId = 2;
  int32    flashPromotionSessionId = 3;
  int32    productId = 4;
  int32  flashPromotionPrice = 5;
  int32    flashPromotionCount = 6;
  int32    flashPromotionLimit = 7;
  int32    sort = 8;

}

message FlashPromotionProductRelationListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  FlashPromotionProductRelationListData data = 6;
  bool success = 7;
}

message FlashPromotionProductRelationUpdateReq {
  int64    id = 1;
  int64    flashPromotionId = 2;
  int64    flashPromotionSessionId = 3;
  int64    productId = 4;
  int64  flashPromotionPrice = 5;
  int64    flashPromotionCount = 6;
  int64    flashPromotionLimit = 7;
  int64    sort = 8;
}

message FlashPromotionProductRelationUpdateResp {
  string pong = 1;
}

message FlashPromotionProductRelationDeleteReq {
  int64 id = 1;
}

message FlashPromotionProductRelationDeleteResp {
  string pong = 1;
}


message FlashPromotionSessionAddReq {
  string      name = 2;
  string      startTime = 3;
  string      endTime = 4;
  int64      status = 5;
  string  createTime = 6;
}

message FlashPromotionSessionAddResp {
  string pong = 1;
}

message FlashPromotionSessionListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message FlashPromotionSessionListData{
  int32      id = 1;
  string      name = 2;
  string      startTime = 3;
  string      endTime = 4;
  int32      status = 5;
  string  createTime = 6;

}

message FlashPromotionSessionListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  FlashPromotionSessionListData data = 6;
  bool success = 7;
}

message FlashPromotionSessionUpdateReq {
  int64      id = 1;
  string      name = 2;
  string      startTime = 3;
  string      endTime = 4;
  int64      status = 5;
  string  createTime = 6;
}

message FlashPromotionSessionUpdateResp {
  string pong = 1;
}

message FlashPromotionSessionDeleteReq {
  int64 id = 1;
}

message FlashPromotionSessionDeleteResp {
  string pong = 1;
}


message HomeAdvertiseAddReq {
  string      name = 2;
  int64      type = 3;
  string      pic = 4;
  string  startTime = 5;
  string  endTime = 6;
  int64      status = 7;
  int64      clickCount = 8;
  int64      orderCount = 9;
  string      url = 10;
  string      note = 11;
  int64      sort = 12;
}

message HomeAdvertiseAddResp {
  string pong = 1;
}

message HomeAdvertiseListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message HomeAdvertiseListData{
  int32      id = 1;
  string      name = 2;
  int32      type = 3;
  string      pic = 4;
  string  startTime = 5;
  string  endTime = 6;
  int32      status = 7;
  int32      clickCount = 8;
  int32      orderCount = 9;
  string      url = 10;
  string      note = 11;
  int32      sort = 12;

}

message HomeAdvertiseListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  HomeAdvertiseListData data = 6;
  bool success = 7;
}

message HomeAdvertiseUpdateReq {
  int64      id = 1;
  string      name = 2;
  int64      type = 3;
  string      pic = 4;
  string  startTime = 5;
  string  endTime = 6;
  int64      status = 7;
  int64      clickCount = 8;
  int64      orderCount = 9;
  string      url = 10;
  string      note = 11;
  int64      sort = 12;
}

message HomeAdvertiseUpdateResp {
  string pong = 1;
}

message HomeAdvertiseDeleteReq {
  int64 id = 1;
}

message HomeAdvertiseDeleteResp {
  string pong = 1;
}


message HomeBrandAddReq {
  int64  brandId = 2;
  string  brandName = 3;
  int64  recommendStatus = 4;
  int64  sort = 5;
}

message HomeBrandAddResp {
  string pong = 1;
}

message HomeBrandListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message HomeBrandListData{
  int32  id = 1;
  int32  brandId = 2;
  string  brandName = 3;
  int32  recommendStatus = 4;
  int32  sort = 5;

}

message HomeBrandListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  HomeBrandListData data = 6;
  bool success = 7;
}

message HomeBrandUpdateReq {
  int64  id = 1;
  int64  brandId = 2;
  string  brandName = 3;
  int64  recommendStatus = 4;
  int64  sort = 5;
}

message HomeBrandUpdateResp {
  string pong = 1;
}

message HomeBrandDeleteReq {
  int64 id = 1;
}

message HomeBrandDeleteResp {
  string pong = 1;
}


message HomeNewProductAddReq {
  int64    productId = 2;
  string  productName = 3;
  int64    recommendStatus = 4;
  int64    sort = 5;
}

message HomeNewProductAddResp {
  string pong = 1;
}

message HomeNewProductListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message HomeNewProductListData{
  int32    id = 1;
  int32    productId = 2;
  string  productName = 3;
  int32    recommendStatus = 4;
  int32    sort = 5;

}

message HomeNewProductListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  HomeNewProductListData data = 6;
  bool success = 7;
}

message HomeNewProductUpdateReq {
  int64    id = 1;
  int64    productId = 2;
  string  productName = 3;
  int64    recommendStatus = 4;
  int64    sort = 5;
}

message HomeNewProductUpdateResp {
  string pong = 1;
}

message HomeNewProductDeleteReq {
  int64 id = 1;
}

message HomeNewProductDeleteResp {
  string pong = 1;
}


message HomeRecommendProductAddReq {
  int64  productId = 2;
  string  productName = 3;
  int64  recommendStatus = 4;
  int64  sort = 5;
}

message HomeRecommendProductAddResp {
  string pong = 1;
}

message HomeRecommendProductListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message HomeRecommendProductListData{
  int32  id = 1;
  int32  productId = 2;
  string  productName = 3;
  int32  recommendStatus = 4;
  int32  sort = 5;

}

message HomeRecommendProductListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  HomeRecommendProductListData data = 6;
  bool success = 7;
}

message HomeRecommendProductUpdateReq {
  int64  id = 1;
  int64  productId = 2;
  string  productName = 3;
  int64  recommendStatus = 4;
  int64  sort = 5;
}

message HomeRecommendProductUpdateResp {
  string pong = 1;
}

message HomeRecommendProductDeleteReq {
  int64 id = 1;
}

message HomeRecommendProductDeleteResp {
  string pong = 1;
}


message HomeRecommendSubjectAddReq {
  int64    subjectId = 2;
  string  subjectName = 3;
  int64    recommendStatus = 4;
  int64    sort = 5;
}

message HomeRecommendSubjectAddResp {
  string pong = 1;
}

message HomeRecommendSubjectListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message HomeRecommendSubjectListData{
  int32    id = 1;
  int32    subjectId = 2;
  string  subjectName = 3;
  int32    recommendStatus = 4;
  int32    sort = 5;

}

message HomeRecommendSubjectListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  HomeRecommendSubjectListData data = 6;
  bool success = 7;
}

message HomeRecommendSubjectUpdateReq {
  int64    id = 1;
  int64    subjectId = 2;
  string  subjectName = 3;
  int64    recommendStatus = 4;
  int64    sort = 5;
}

message HomeRecommendSubjectUpdateResp {
  string pong = 1;
}

message HomeRecommendSubjectDeleteReq {
  int64 id = 1;
}

message HomeRecommendSubjectDeleteResp {
  string pong = 1;
}

service Sms {

  rpc CouponAdd(CouponAddReq) returns(CouponAddResp){
    option (google.api.http) = {
      post: "/api/sms/coupon/add"
      body: "*"
    };
  }
  rpc CouponList(CouponListReq) returns(CouponListResp){
    option (google.api.http) = {
      post: "/api/sms/coupon/list"
      body: "*"
    };
  }
  rpc CouponUpdate(CouponUpdateReq) returns(CouponUpdateResp){
    option (google.api.http) = {
      post: "/api/sms/coupon/update"
      body: "*"
    };
  }
  rpc CouponDelete(CouponDeleteReq) returns(CouponDeleteResp){
    option (google.api.http) = {
      post: "/api/sms/coupon/delete"
      body: "*"
    };
  }

  rpc CouponHistoryAdd(CouponHistoryAddReq) returns(CouponHistoryAddResp){
    option (google.api.http) = {
      post: "/api/sms/couponhistory/add"
      body: "*"
    };
  }
  rpc CouponHistoryList(CouponHistoryListReq) returns(CouponHistoryListResp){
    option (google.api.http) = {
      post: "/api/sms/couponhistory/list"
      body: "*"
    };
  }
  rpc CouponHistoryUpdate(CouponHistoryUpdateReq) returns(CouponHistoryUpdateResp){
    option (google.api.http) = {
      post: "/api/sms/couponhistory/update"
      body: "*"
    };
  }
  rpc CouponHistoryDelete(CouponHistoryDeleteReq) returns(CouponHistoryDeleteResp){
    option (google.api.http) = {
      post: "/api/sms/couponhistory/delete"
      body: "*"
    };
  }


  rpc FlashPromotionLogAdd(FlashPromotionLogAddReq) returns(FlashPromotionLogAddResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotionlog/add"
      body: "*"
    };
  }
  rpc FlashPromotionLogList(FlashPromotionLogListReq) returns(FlashPromotionLogListResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotionlog/list"
      body: "*"
    };
  }
  rpc FlashPromotionLogUpdate(FlashPromotionLogUpdateReq) returns(FlashPromotionLogUpdateResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotionlog/update"
      body: "*"
    };
  }
  rpc FlashPromotionLogDelete(FlashPromotionLogDeleteReq) returns(FlashPromotionLogDeleteResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotionlog/delete"
      body: "*"
    };
  }

  rpc FlashPromotionAdd(FlashPromotionAddReq) returns(FlashPromotionAddResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotion/add"
      body: "*"
    };
  }
  rpc FlashPromotionList(FlashPromotionListReq) returns(FlashPromotionListResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotion/list"
      body: "*"
    };
  }
  rpc FlashPromotionUpdate(FlashPromotionUpdateReq) returns(FlashPromotionUpdateResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotion/update"
      body: "*"
    };
  }
  rpc FlashPromotionDelete(FlashPromotionDeleteReq) returns(FlashPromotionDeleteResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotion/delete"
      body: "*"
    };
  }


  rpc FlashPromotionSessionAdd(FlashPromotionSessionAddReq) returns(FlashPromotionSessionAddResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotionsession/add"
      body: "*"
    };
  }
  rpc FlashPromotionSessionList(FlashPromotionSessionListReq) returns(FlashPromotionSessionListResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotionsession/list"
      body: "*"
    };
  }
  rpc FlashPromotionSessionUpdate(FlashPromotionSessionUpdateReq) returns(FlashPromotionSessionUpdateResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotionsession/update"
      body: "*"
    };
  }
  rpc FlashPromotionSessionDelete(FlashPromotionSessionDeleteReq) returns(FlashPromotionSessionDeleteResp){
    option (google.api.http) = {
      post: "/api/sms/flashpromotionsession/delete"
      body: "*"
    };
  }

  rpc HomeAdvertiseAdd(HomeAdvertiseAddReq) returns(HomeAdvertiseAddResp){
    option (google.api.http) = {
      post: "/api/sms/homeadvertise/add"
      body: "*"
    };
  }
  rpc HomeAdvertiseList(HomeAdvertiseListReq) returns(HomeAdvertiseListResp){
    option (google.api.http) = {
      post: "/api/sms/homeadvertise/list"
      body: "*"
    };
  }
  rpc HomeAdvertiseUpdate(HomeAdvertiseUpdateReq) returns(HomeAdvertiseUpdateResp){
    option (google.api.http) = {
      post: "/api/sms/homeadvertise/update"
      body: "*"
    };
  }
  rpc HomeAdvertiseDelete(HomeAdvertiseDeleteReq) returns(HomeAdvertiseDeleteResp){
    option (google.api.http) = {
      post: "/api/sms/homeadvertise/delete"
      body: "*"
    };
  }

  rpc HomeBrandAdd(HomeBrandAddReq) returns(HomeBrandAddResp){
    option (google.api.http) = {
      post: "/api/sms/homebrand/add"
      body: "*"
    };
  }
  rpc HomeBrandList(HomeBrandListReq) returns(HomeBrandListResp){
    option (google.api.http) = {
      post: "/api/sms/homebrand/list"
      body: "*"
    };
  }
  rpc HomeBrandUpdate(HomeBrandUpdateReq) returns(HomeBrandUpdateResp){
    option (google.api.http) = {
      post: "/api/sms/homebrand/update"
      body: "*"
    };
  }
  rpc HomeBrandDelete(HomeBrandDeleteReq) returns(HomeBrandDeleteResp){
    option (google.api.http) = {
      post: "/api/sms/homebrand/delete"
      body: "*"
    };
  }

  rpc HomeNewProductAdd(HomeNewProductAddReq) returns(HomeNewProductAddResp){
    option (google.api.http) = {
      post: "/api/sms/homenewproduct/add"
      body: "*"
    };
  }
  rpc HomeNewProductList(HomeNewProductListReq) returns(HomeNewProductListResp){
    option (google.api.http) = {
      post: "/api/sms/homenewproduct/list"
      body: "*"
    };
  }
  rpc HomeNewProductUpdate(HomeNewProductUpdateReq) returns(HomeNewProductUpdateResp){
    option (google.api.http) = {
      post: "/api/sms/homenewproduct/update"
      body: "*"
    };
  }
  rpc HomeNewProductDelete(HomeNewProductDeleteReq) returns(HomeNewProductDeleteResp){
    option (google.api.http) = {
      post: "/api/sms/homenewproduct/delete"
      body: "*"
    };
  }

  rpc HomeRecommendProductAdd(HomeRecommendProductAddReq) returns(HomeRecommendProductAddResp){
    option (google.api.http) = {
      post: "/api/sms/homerecommendproduct/add"
      body: "*"
    };
  }
  rpc HomeRecommendProductList(HomeRecommendProductListReq) returns(HomeRecommendProductListResp){
    option (google.api.http) = {
      post: "/api/sms/homerecommendproduct/list"
      body: "*"
    };
  }
  rpc HomeRecommendProductUpdate(HomeRecommendProductUpdateReq) returns(HomeRecommendProductUpdateResp){
    option (google.api.http) = {
      post: "/api/sms/homerecommendproduct/update"
      body: "*"
    };
  }
  rpc HomeRecommendProductDelete(HomeRecommendProductDeleteReq) returns(HomeRecommendProductDeleteResp){
    option (google.api.http) = {
      post: "/api/sms/homerecommendproduct/delete"
      body: "*"
    };
  }

  rpc HomeRecommendSubjectAdd(HomeRecommendSubjectAddReq) returns(HomeRecommendSubjectAddResp){
    option (google.api.http) = {
      post: "/api/sms/homerecommendsubject/add"
      body: "*"
    };
  }
  rpc HomeRecommendSubjectList(HomeRecommendSubjectListReq) returns(HomeRecommendSubjectListResp){
    option (google.api.http) = {
      post: "/api/sms/homerecommendsubject/list"
      body: "*"
    };
  }
  rpc HomeRecommendSubjectUpdate(HomeRecommendSubjectUpdateReq) returns(HomeRecommendSubjectUpdateResp){
    option (google.api.http) = {
      post: "/api/sms/homerecommendsubject/update"
      body: "*"
    };
  }
  rpc HomeRecommendSubjectDelete(HomeRecommendSubjectDeleteReq) returns(HomeRecommendSubjectDeleteResp){
    option (google.api.http) = {
      post: "/api/sms/homerecommendsubject/delete"
      body: "*"
    };
  }
}